# redacto

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
src/redacto/: __init__.py
src/redacto/events/: __init__.py  client.py  config.py  events.py  exceptions.py  models.py
