[project]
name = "redacto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zaid", email = "zaid@redacto.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudevents>=1.12.0",
    "pika>=1.3.2",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
